--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </div>
 
 <div id="end">
-    <button id="retry">Retry</button>
+    <div id="endcredit">
+        <button id="retry">Retry</button>
+    </div>
 </div>
 
 
