add sound, end game, timer next

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </div>
 </div>
 
+<div id="win">
+    <div id="wincredit">
+        <button id="retry">Play Again!</button>
+    </div>
+</div>
+
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
